# machismo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/necrodancer/: dylib_map.conf  machismo-gog-synchrony.conf  machismo-gog.conf  machismo.conf
examples/necrodancer/patches/: necrodancer-gog-synchrony.conf  necrodancer-gog.conf  necrodancer.conf
examples/necrodancer/src/: game_patches.c
examples/necrodancer/src/stubs/: datastream.h
patches/: bgfx-buffer-orphan.patch  libcxx-darwin-pthread-compat.patch
scripts/: build-bgfx.sh  build-libcxx.sh  build-luajit.sh  build-sfml.sh
src/: bgfx_shim.c  bgfx_shim.h  commpage.c  commpage.h  config.c  config.h  dylib_loader.c  dylib_loader.h  eh_frame.c  eh_frame.h  gdb_jit.c  gdb_jit.h  loader.c  loader.h  lse_emul.c  lse_emul.h  lua_entity_opt.c  lua_entity_opt.h  machismo.c  macho_defs.h  patcher.c  patcher.h  resolver.c  resolver.h  stack.c  trampoline.c  trampoline.h
src/elfcalls/: dthreads.h  elfcalls.c  elfcalls.h  threads.c  threads.h
src/shim/: heap_trace.c  heap_trace.h  libsystem_shim.c  libsystem_shim.ver
src/stubs/: apple_abi.h
tests/: run_tests.sh  test_bgfx_gles.c  test_build.sh  test_commpage.sh  test_fat_binary.sh  test_lc_main.sh  test_libsystem_shim.sh  test_lse_emul.c  test_necrodancer_integration.sh  test_necrodancer_parse.sh  test_necrolevel_rng.c  test_parse_exit0.sh  test_parse_hello.sh  test_parse_static.sh  test_resolver_mapping.sh  test_resolver_parse.sh  test_resolver_rebase.sh  test_trampoline_basic.sh  test_wrapgen_basic.sh  test_wrapgen_symbols.sh
tests/fixtures/: build_fixtures.sh  exit0.s  exit42.s  fat_stub_x86.s  hello_write.s  libtest_native.c  trampoline_target.s  with_lc_main.s
tools/: symbol_audit.sh  wrapgen.cpp
